m/k/coder-amanibhavam-school-cluster-traefik/patch-service-traefik.yaml
#ManagedBy: cue

apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/internal-hostname: '*.school.amanibhavam.defn.run, *.default.school.amanibhavam.defn.run, *.coder.school.amanibhavam.defn.run'
spec:
  type: ClusterIP
